--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
        <section class="home" id="home">
 
         <div class="image">
-            <img src="images/hillary.jpeg" alt="">
+            <img src="hillary.jpeg" alt="">
         </div>
 
         <div class="content">
@@ -213,32 +213,32 @@
             </div>
 
             <div class="box">
-                <img src="images/lala-azizli-tfNyTfJpKvc-unsplash.jpg" alt="">
+                <img src="lala-azizli-tfNyTfJpKvc-unsplash.jpg" alt="">
                 <h3>web development</h3>
                 <span>(2020- 2022)</span>
             </div>
 
             <div class="box">
-                <img src="images/marvin-meyer-SYTO3xs06fU-unsplash.jpg" alt="">
+                <img src="marvin-meyer-SYTO3xs06fU-unsplash.jpg" alt="">
                 <h3>web development</h3>
                 <span>(2020- 2022)</span>
               </div>
 
               
             <div class="box">
-                <img src="images/domenico-loia-hGV2TfOh0ns-unsplash.jpg" alt="">
+                <img src="domenico-loia-hGV2TfOh0ns-unsplash.jpg" alt="">
                 <h3>web development</h3>
                 <span>(2020- 2022)</span>
               </div>
   
               <div class="box">
-                  <img src="images/charlesdeluvio-Lks7vei-eAg-unsplash.jpg.crdownload" alt="">
+                  <img src="charlesdeluvio-Lks7vei-eAg-unsplash.jpg.crdownload" alt="">
                   <h3>web development</h3>
                   <span>(2020- 2022)</span>
               </div>
   
               <div class="box">
-                  <img src="images/daniel-korpai-pKRNxEguRgM-unsplash.jpg" alt="">
+                  <img src="daniel-korpai-pKRNxEguRgM-unsplash.jpg" alt="">
                   <h3>web development</h3>
                   <span>(2020- 2022)</span>
                 </div>
